add_subdirectory( zp )

add_sources(
	CMakeLists.txt
	../../public/vinterface/interface.cpp
	../../public/vinterface/interface.h
	activity.h
	activitymap.h
	airtank.cpp
	animating.cpp
	animation.cpp
	animation.h
	basemonster.h
	bmodels.cpp
	buttons.cpp
	cbase.cpp
	cbase.h
	CBugfixedServer.cpp
	CBugfixedServer.h
	cdll_dll.h
	client.cpp
	client.h
	com_utils.cpp
	com_utils.h
	combat.cpp
	decals.h
	defaultai.cpp
	defaultai.h
	doors.cpp
	doors.h
	effects.cpp
	effects.h
	enginecallback.h
	explode.cpp
	explode.h
	extdll.h
	flyingmonster.cpp
	flyingmonster.h
	func_break.cpp
	func_break.h
	func_tank.cpp
	game.cpp
	gamerules.cpp
	gamerules.h
	genericmonster.cpp
	ggrenade.cpp
	globals.cpp
	h_ai.cpp
	h_battery.cpp
	h_cine.cpp
	h_cycler.cpp
	h_export.cpp
	healthkit.cpp
	items.cpp
	items.h
	lights.cpp
	maprules.cpp
	monsterevent.h
	monstermaker.cpp
	monsters.cpp
	monsters.h
	monsterstate.cpp
	mortar.cpp
	multiplay_gamerules.cpp
	nodes.cpp
	nodes.h
	observer.cpp
	path.cpp
	path.h
	pathcorner.cpp
	pch.h
	plane.cpp
	plane.h
	plats.cpp
	player.cpp
	player.h
	rat.cpp
	roach.cpp
	saverestore.h
	schedule.cpp
	schedule.h
	scripted.cpp
	scripted.h
	scriptevent.h
	singleplay_gamerules.cpp
	skill.cpp
	skill.h
	sound.cpp
	soundent.cpp
	soundent.h
	spectator.cpp
	spectator.h
	squadmonster.cpp
	squadmonster.h
	subs.cpp
	talkmonster.cpp
	talkmonster.h
	teamplay_gamerules.cpp
	teamplay_gamerules.h
	tempmonster.cpp
	trains.h
	triggers.cpp
	turret.cpp
	util.cpp
	util.h
	util_shared.cpp
	vehicle.cpp
	voice_gamemgr.cpp
	voice_gamemgr.h
	weapons.cpp
	weapons.h
	world.cpp
)

if( PLATFORM_WINDOWS )
	add_sources(
		hl.def
		resource.h
	)
endif()
