add_sources(
	CMakeLists.txt
	gameui_scale.cpp
	gameui_scale.h
	gameui_test_panel.cpp
	gameui_test_panel.h
	gameui_viewport.cpp
	gameui_viewport.h
	CCreateWorkshopInfoBox.cpp
	CCreateWorkshopInfoBox.h
	CImageMenuButton.cpp
	CImageMenuButton.h
)

add_subdirectory( options )
add_subdirectory( filedialog )
add_subdirectory( serverbrowser )
